objects/pop_obj_500__c.object
<CustomObject>
    <fields>
        <fullName>cvb__c</fullName>
        <label>cvb</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>qwe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>qwe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zxc1__c</fullName>
        <label>zxc1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zxc2__c</fullName>
        <description>asd zc</description>
        <label>zxc2</label>
        <type>Phone</type>
    </fields>
    <label>pop obj 500</label>
    <nameField>
        <label>pop obj 500 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>pop obj 500</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>